[B]1.0.2[/B]
-  Mar 21, 2015 : added plugin.video.showday.tv-1.0.2 seppius-xbmc-repo (Fork)

[B]1.0.2[/B]
- Oct 9, 2016 : text color plugin.video.showday.tv deleted

[B]1.0.3[/B]
- Dec 3, 2016 : fixed Get_Info

[B]1.0.4[/B]
- Dec 3, 2016 : fixed Get_Info, url

[B]1.0.10[/B]
- Oct 18, 2017 merged code by BaRoN: fixed host, server, Get_Info, url, player link 

[B]1.0.11[/B]
- Oct 21, 2017 : fixed a search cyrillic

[B]1.0.12[/B]
- Nov 6, 2017 merged code by Sarabande: fixed get play list url

[B]1.0.13[/B]
- Nov 9, 2017 merged code by Den4t: fixed Decode player-links