@@ -1,5 +1,5 @@
 [B]1.0.2[/B]
--  Mar 21, 2015 : added plugin.video.showday.tv-1.0.2 seppius-xbmc-repo (Fork)
+-  Mar 21, 2015 : seppius-xbmc-repo add plugin.video.showday.tv-1.0.2 
 
 [B]1.0.2[/B]
 - Oct 9, 2016 : text color plugin.video.showday.tv deleted
@@ -21,3 +21,6 @@
 
 [B]1.0.13[/B]
 - Nov 9, 2017 merged code by Den4t: fixed Decode player-links
+
+[B]1.0.14[/B]
+- Nov 15, 2017 merged code by Sarabande: extended list of genres
